--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MultiChannel</string>
+    <string name="app_name1">MultiChannel111</string>
+    <string name="app_name2">MultiChannel222</string>
     <string name="action_settings">Settings</string>
 </resources>
